Yad2Proj/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
  white-space: normal;
  text-align: center;
  word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
  color: #0366d6;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  font-size: 14px;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.border-top {
  border-top: 1px solid #e5e5e5;
}
.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

header {
   height: 90px;
}

body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
   height: auto;
   /*border: 1px solid black;*/
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  white-space: nowrap;
  line-height: 60px; /* Vertically center the text there */
}

.main {
   border: 3px solid black;
   padding: 20px;
   width: 1000px;
   height: 400px;
   float: left;
   margin: 20px;
}

.myBorder {
   border: 1px solid black;
   padding: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
   margin-right: 20px;
}

.productTile {
    flex-wrap: wrap;
    width: 200px;
    border: 3px solid black;
    margin: 20px;
}

.main-name-header {
   margin-top: 20px;
   margin-left: 20px;
}

